Sequencer Text Effect: wrong vertical 'TOP' alignment #46155

Closed
opened 2015-09-18 21:19:28 +02:00 by Thibaut Bequet · 9 comments

System Information
W8.1 64-bit, GT650M

Blender Version
Broken: 2.76RC1 c586e30
Worked: n/a

Short description of error
The alignment option of the Text Effect in the sequencer is inverted (right aligns to left and left aligns to right).

Exact steps for others to reproduce the error
Go straight to the sequencer, add a Text Effect strip, change alignment to Left or Right.

**System Information** W8.1 64-bit, GT650M **Blender Version** Broken: 2.76RC1 c586e30 Worked: n/a **Short description of error** The alignment option of the Text Effect in the sequencer is inverted (right aligns to left and left aligns to right). **Exact steps for others to reproduce the error** Go straight to the sequencer, add a Text Effect strip, change alignment to Left or Right.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThibautBequet

Added subscriber: @ThibautBequet

Added subscriber: @mont29

Added subscriber: @mont29

No, alignment works as expected - it is left or right aligned to the vertical line defined by the X position setting.

However, should be the same with top/bottom/center vertical alignment, but there it looks like TOP option is broken…

No, alignment works as expected - it is left or right aligned **to the vertical line defined by the X position setting**. However, should be the same with top/bottom/center vertical alignment, but there it looks like TOP option is broken…
Bastien Montagne changed title from Sequencer Text Effect alignment inverted to Sequencer Text Effect: wrong vertical 'TOP' alignment 2015-09-18 22:57:54 +02:00
Bastien Montagne self-assigned this 2015-09-18 22:57:54 +02:00

This issue was referenced by 6e19aa42bf

This issue was referenced by 6e19aa42bf7aa5ef7dbc9a6a37de0f4a04b6a72d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you for the explanation and quick fix.
I am however confused about the top/bottom/center alignment as I cannot see this choice in the UI close to the left/center/right dropdown in the properties shelf (n key).
I have tested both 2.76RC1 c586e30 and the latest 208e064 build to no avail.
Am I not looking at the right place? Is this still a todo, or should it be logged in as a new task?

Thank you for the explanation and quick fix. I am however confused about the top/bottom/center alignment as I cannot see this choice in the UI close to the left/center/right dropdown in the properties shelf (n key). I have tested both 2.76RC1 c586e30 and the latest 208e064 build to no avail. Am I not looking at the right place? Is this still a todo, or should it be logged in as a new task?

Eeeeeh well! It’s just below left/center/right dropdown for me, can you please attach a screenshot of your UI?

Eeeeeh well! It’s just below left/center/right dropdown for me, can you please attach a screenshot of your UI?
Author

The two versions that I mentionned in my previous comment only showed "Align:" with the L/C/R dropdown (and this is still true for the "official" 2.76RC1).
I just downloaded the last 36d6424 win64 build and I now get both "Align X:" and "Align Y:" options, so all should be resolved for future releases =)

The two versions that I mentionned in my previous comment only showed "Align:" with the L/C/R dropdown (and this is still true for the "official" 2.76RC1). I just downloaded the last 36d6424 win64 build and I now get both "Align X:" and "Align Y:" options, so all should be resolved for future releases =)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46155
No description provided.