Fix T46155: Sequencer Text Effect: wrong vertical 'TOP' alignment.

Logic was broken for this vertical alignment option - we need to remove one line height here...